--- a/Symptom Tracker/Base.lproj/Main.storyboard
+++ b/Symptom Tracker/Base.lproj/Main.storyboard
@@ -72,7 +72,7 @@
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="CQj-X0-kWI"/>
                                 </connections>
                             </collectionView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logomakr_9ZWfmh" translatesAutoresizingMaskIntoConstraints="NO" id="yNN-Ch-Gpg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1024-1" translatesAutoresizingMaskIntoConstraints="NO" id="yNN-Ch-Gpg">
                                 <rect key="frame" x="155" y="84" width="65" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="65" id="7cT-oL-eXm"/>
@@ -176,6 +176,7 @@
                                                 </segmentedControl>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11/26/2017" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loM-1X-RTl">
                                                     <rect key="frame" x="16" y="0.0" width="271" height="40"/>
+                                                    <color key="tintColor" red="0.41508537530899048" green="0.69286686182022095" blue="0.96709710359573364" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="271" id="DUk-VU-7No"/>
                                                         <constraint firstAttribute="height" constant="40" id="pMK-6M-NvX"/>
@@ -265,6 +266,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="1024-1" width="1024" height="1024"/>
         <image name="Logomakr_9ZWfmh" width="1015" height="941"/>
     </resources>
 </document>
