--- a/Symptom Tracker/Base.lproj/Main.storyboard
+++ b/Symptom Tracker/Base.lproj/Main.storyboard
@@ -123,7 +123,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logomakr_9ZWfmh" translatesAutoresizingMaskIntoConstraints="NO" id="OTY-bw-mGh">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1024-1" translatesAutoresizingMaskIntoConstraints="NO" id="OTY-bw-mGh">
                                 <rect key="frame" x="155" y="84" width="65" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="65" id="QkF-an-RaN"/>
@@ -267,6 +267,5 @@
     </scenes>
     <resources>
         <image name="1024-1" width="1024" height="1024"/>
-        <image name="Logomakr_9ZWfmh" width="1015" height="941"/>
     </resources>
 </document>
